# ai-web-studio

./: .env.example  pyproject.toml
alembic/: env.py
alembic/versions/: cff9f7b10170_add_projects_and_generation_jobs.py  e592cb40d8d8_create_users_table.py
app/: main.py
app/ai/: client.py  schemas.py
app/ai/agents/: base_agent.py  frontend_agent.py
app/ai/prompts/: frontend_prompts.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  generation.py  health.py  users.py
app/core/: config.py  database.py  logging.py  security.py
app/models/: __init__.py  job.py  project.py  user.py
app/repositories/: job_repo.py  project_repo.py  user_repo.py
app/schemas/: auth.py  job.py  project.py  user.py
app/services/: auth_service.py  generation_service.py  project_service.py
tests/: conftest.py  test_auth.py  test_health.py
